# kinesys-backend

./: AI.md  README.md  pyproject.toml
.github/workflows/: deploy.yaml
backend/alembic/versions/: 2026-01-25-00-07_b598b7cf8942.py  2026-01-25-03-26_331df797ed0a.py  2026-01-25-12-00_add_leads_tables.py  2026-01-25-13-00_fix_leads_updated_at.py  2026-01-25-14-00_add_last_activity_at.py  2026-01-25-15-00_add_lead_enum_types.py  2026-01-25-16-00_fix_all_lead_column_types.py  2026-01-25-17-00_convert_enums_to_varchar.py  2026-01-25-18-00_add_user_refresh_token.py  2026-01-25-19-00_add_bookings_table.py  2026-01-25-20-00_add_calendar_event_links_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/routers/: __init__.py  ai_calling.py  auth.py  bookings.py  calendar.py  calls.py  leads.py  mail.py
backend/app/controllers/: auth.py
backend/app/core/: config.py  jwt.py
backend/app/crud/: booking_crud.py  lead_crud.py  user_crud.py
backend/app/db/: database.py
backend/app/models/: __init__.py  base_model.py  booking_model.py  calendar_event_link_model.py  lead_model.py  user_model.py
backend/app/models/enums/: enums.py
backend/app/schemas/: booking_schema.py  calendar_schema.py  lead_schema.py  user_schema.py
backend/app/services/: r2_service.py  websocket_manager.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_bookings.py  test_calendar.py  test_lead_schemas.py
