[project]
name = "kinesys-backend"
version = "0.1.0"
description = "Async FastAPI backend for the Kinesys CRM platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "google-api-python-client>=2.188.0",
    "google-auth-oauthlib>=1.2.4",
    "livekit>=1.0.23",
    "livekit-api>=1.0.5",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.31",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "tzdata>=2024.1",
]
